# ats_comments_local

./: .gitignore  Cargo.toml  NOTTHISONE.sh  READ.ME  atscomments.service  startServer.sh  test.py  test.sh  test_sendmail.sh  vmSetup.sh
src/: accounts.rs  db.rs  envvars.rs  functions.rs  main.rs  sendmail.rs  server.rs  types.rs
