[package]
name = "ats_comments_local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.4"
actix-web = { version = "4.4", features = ["openssl"] }
actix-multipart = "0.6.1"
openssl = { version = "0.10.60", features = ["v110"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
env_logger = "0.10.1"
log = "0.4.20"
rusqlite = { version = "0.29.0", features = ["bundled"] }
md-5 = "0.10.5"
chrono = "0.4.31"
mailjet-rs = "0.3.0"
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
flate2 = "1.0.28"
tar = "0.4.40"
futures = "0.3.30"
base64 = "0.21.7"
sanitize-filename = "0.5.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

